--- a/html/Page.html
+++ b/html/Page.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 				<div class="diffOverlay">
-					<img src="../res/smileyMedium.png" class="toggleButton" value="Medium" onclick="setDifficulty(this)"/>
+					<img src="../res/smileyMedium.png" class="toggleButton" melda="koala" value="Medium" onclick="setDifficulty(this)"/>
 					<div class="middleCanvas" onclick="setDifficulty(document.getElementsByClassName('toggleButton')[5])">
 						<div class="insideText">Medium</div>
 					</div>
